crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_qmark_u000a.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<?\n\"####)"
---
[
    Token {
        data: "\n",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
